--- a/client/css/main.css
+++ b/client/css/main.css
@@ -1,14 +1,31 @@
+/*
+CSS template{
+  [arrangement]
+  [position]
+  ...
+  [sizing]
+  [margin]
+  ...
+  [border/padding]
+  [internal format]
+}
+*/
+
 .note{
+  display: inline-block;
+  position: relative;
+
   width: 300px;
   height: 150px;
-  
+  margin: 10px;
+
   border: 3px solid black;
 }
 .note > textarea{
-  width: 98%;
-  height: 98%;
-  margin: auto;
-  
+  width: 90%;
+  height: 90%;
+  margin: 2.5% 5% 2.5% 5%;
+
   resize: none;
   border: none;
 }
@@ -16,3 +33,8 @@
   background-color: yellow;
 }
 
+.button-flip{
+  position: absolute;
+  right: 0;
+  top: 0;
+}
