Restructured the DB format to be folder-oriented (major update)

--- a/client/modules/folders/folders.css
+++ b/client/modules/folders/folders.css
@@ -14,7 +14,16 @@ CSS template{
 margin shorthand: top right bottom left;
 
 */
+.notice-syncing{
+  color: red;
+}
+.notice-synced{
+  color: green;
+}
 
 .folders{
   margin: 0 0 0 5%;
+}
+.folders .active{
+  color: blue;
 }
