--- a/client/modules/notes/notes.css
+++ b/client/modules/notes/notes.css
@@ -86,5 +86,9 @@ button{
 }
 
 .new-tag{
-  border: 1px solid black;
+  border: 0;
+  padding: 2px;
+
+  font-size: 0.9em;
+  /*border: 1px solid black;*/
 }
